Kubernetes/frontend-Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1  # Define how many frontend pods you want to run
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: a6j0n/frontend:latest  # Replace with your actual image name
          ports:
            - containerPort: 80  # Port for your React app (or 3000, depending on your configuration)
          volumeMounts:
          - name: nginx-conf
            mountPath: "/etc/nginx/conf.d/default.conf"
            subPath: "default.conf" 
            readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # Make sure this matches the port in the frontend container
  type: ClusterIP  # You can use LoadBalancer or NodePort for external access
        #type: LoadBalancer
